[project]
name = "matrix-completion"
version = "0.1.0"
description = ""
authors = [
    {name = "aploskin",email = "aploskin@ozon.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
